// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> should match snapshot 1`] = `
<styled.div>
  <styled.form
    data-test="submit"
    data-testid="submit"
    onSubmit={[Function]}
  >
    <Styled(styled.h1)
      center={true}
    >
      Login
    </Styled(styled.h1)>
    <styled.div>
      <input
        data-test="password"
        onChange={[Function]}
        type="password"
        value=""
      />
    </styled.div>
    <styled.button
      data-test="submit-button"
      data-testid="submit-button"
      type="submit"
    >
      Login
    </styled.button>
    <Link
      to="/request"
    >
      Request access
    </Link>
  </styled.form>
</styled.div>
`;

exports[`<Request /> should match snapshot 1`] = `
<styled.div>
  <styled.form
    data-test="submit"
    onSubmit={[Function]}
  >
    <Styled(styled.h1)
      center={true}
    >
      Request
    </Styled(styled.h1)>
    <styled.div>
      <label
        htmlFor="name"
      >
        Name
      </label>
      <input
        data-test="name"
        id="name"
        name="name"
        onChange={[Function]}
        type="text"
        value=""
      />
    </styled.div>
    <styled.div>
      <label
        htmlFor="name"
      >
        Email
      </label>
      <input
        data-test="email"
        id="email"
        name="email"
        onChange={[Function]}
        type="text"
        value=""
      />
    </styled.div>
    <styled.button
      data-test="submit-button"
      data-testid="submit-button"
      type="submit"
    >
      Request invite
    </styled.button>
  </styled.form>
</styled.div>
`;

exports[`<Slash /> should match snapshot 1`] = `
<styled.div
  data-testid="home"
>
  <InfiniteLoader
    isItemLoaded={[Function]}
    itemCount={0}
    loadMoreItems={[Function]}
  >
    <Component />
  </InfiniteLoader>
</styled.div>
`;
